<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contraction Timer</string>
    <string name="menu_clear">Clear all contraction history</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="averageLast5">Average (Last 5)</string>
    <string name="current">Current</string>
    <string name="restPeriod">Rest</string>
    <string name="startToStart">S - S</string>
    <string name="NA">N/A</string>
    <string name="duration">Duration</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="timerName">Timer Name</string>
    <string name="timerDuration">Timer Duration (min)</string>
    <string name="title">Title</string>

</resources>