<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContractionTimer" >

    <DigitalClock
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SurfaceView
        android:id="@+id/timeGraph"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:id="@+id/MainSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/timeGraph"
        android:layout_below="@id/clock" >

        <ListView
            android:id="@+id/contractionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5" >
        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="right" >

            <Button
                android:id="@+id/startStopButton"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/start" />

            <TableLayout
                android:id="@+id/statistics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/startStopButton"
                android:layout_marginRight="5dp">

                <TableRow
                    android:id="@+id/TableRow03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/CurrentTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/current"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/CurrentTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight=".5"
                        android:gravity="right"
                        android:text="0:00"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/last5Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/averageLast5"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/averageLast5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight=".5"
                        android:gravity="right"
                        android:text="50 sec"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </TableRow>
            </TableLayout>

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/reminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/clock"
        android:gravity="center"
        android:text="@string/reminderTurnSides"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000"
        android:textStyle="bold" />

</RelativeLayout>